Adding a new privilege for mangement. For this made following changes 1. Added a new Privilege 2. Added a new Role for it 3. Added a new user to test this privilege 4. Added a new endpoint 'management' which will redirect user to mangement.html page

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -46,6 +46,7 @@ label.pages.users.message=View Logged In Users
 label.pages.users.sessionregistry.message=View Logged In Users from SessionRegistry
 label.pages.admin.message=Welcome Admin
 label.pages.user.message=Welcome User
+label.pages.manager.message=Welcome Manager
 label.successRegister.title=Registration Success
 label.badUser.title=Invalid Link
 ValidEmail.user.email=Invalid email address!
